# hane

./: .fourmolu.yaml  .gitignore  .hint.yaml.bak  .hlint.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REFACTOR_PLAN.md  REFACTOR_SUMMARY.md  SECURITY.md  TODO-END.md  cabal.project  codebuff.json  hane.cabal  knowledge.md
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release-binaries.yml
.serena/: project.yml
app/: Main.hs
config/: config.sample.toml
docs/: CI_IMPROVEMENTS.md  CONFIG.md  CONTRIBUTING_DEVELOPERS.md  DEVELOPMENT.md  KEYMAPS.md  KNOWN_ISSUES.md  RELEASE.md  RELEASE_NOTES_v0.1.0.0.md
src/Editor/: App.hs  Buffer.hs  Config.hs  File.hs  Haskell.hs  Keymap.hs  Markdown.hs  Render.hs  Types.hs
src/Editor/App/: Event.hs  State.hs  Types.hs  UI.hs
test/: Spec.hs
test/Editor/: AppSpec.hs  BufferSpec.hs  ConfigSpec.hs  FileSpec.hs
