cabal-version:      3.0
name:               hane
version:            0.1.0.0
synopsis:           Terminal-based Haskell/Markdown editor (MVP)
description:        Hane is a fast TUI editor focused on Markdown and Haskell. This is the initial skeleton based on AGENT.md.
category:           Editor
build-type:         Simple
author:             Your Name
maintainer:         daydream_garden@yahoo.co.jp
license:            BSD-3-Clause
license-file:       LICENSE
extra-source-files: README.md
extra-doc-files: CHANGELOG.md
tested-with:        GHC == 9.6.5, GHC == 9.6.7, GHC == 9.8.2, GHC == 9.10.1, GHC == 9.12.2
homepage:           https://github.com/SilentMalachite/hane
bug-reports:        https://github.com/SilentMalachite/hane/issues

flag icu
  description: Enable text-icu for grapheme boundaries
  manual:      True
  default:     False

library
  exposed-modules:
      Editor.App
      Editor.App.Types
      Editor.App.UI
      Editor.App.State
      Editor.App.Event
      Editor.Buffer
      Editor.Render
      Editor.Markdown
      Editor.Haskell
      Editor.Config
      Editor.Types
      Editor.Keymap
      Editor.File
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
      base               >=4.17 && <5,
      text               >=2.0 && <3,
      bytestring         >=0.11 && <0.13,
      brick              >=1.7 && <3,
      vty                >=6 && <7,
      mtl                >=2.2 && <3,
      transformers       >=0.5 && <0.7,
      cmark-gfm          >=0.2 && <0.3,
      tagsoup            >=0.14 && <0.15,
      ansi-terminal      >=0.11 && <2,
      typed-process      >=0.2 && <0.3,
      directory          >=1.3 && <1.6,
      filepath           >=1.4 && <1.6,
      unicode-transforms >=0.3 && <0.5
      
  if flag(icu)
    build-depends: text-icu >=0.8 && <1
    cpp-options:   -DUSE_ICU

executable hane
  main-is:          Main.hs
  other-modules:    Paths_hane
  autogen-modules:  Paths_hane
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base  >=4.17 && <5,
      hane

test-suite hane-tests
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  default-language: Haskell2010
  ghc-options:      -Wall
  other-modules:
      Editor.AppSpec
      Editor.BufferSpec
      Editor.ConfigSpec
      Editor.FileSpec
  build-depends:
      base      >=4.17 && <5,
      hane,
      hspec     >=2.10 && <3,
      text      >=2.0 && <3,
      directory >=1.3 && <1.6,
      filepath  >=1.4 && <1.6

source-repository head
  type: git
  location: https://github.com/SilentMalachite/hane.git
